--- a/src/assets/sass/Home/Home.scss
+++ b/src/assets/sass/Home/Home.scss
@@ -136,6 +136,11 @@ $bgRosa: #f9cdcd;
                 background: $bgDark;
                 color: $bgRosa;
             }
+
+            button:hover {
+                background-color: $bgRosa;
+                color: $bgDark;
+            }
         }
 
         video {
