--- a/src/assets/sass/Work/Work.scss
+++ b/src/assets/sass/Work/Work.scss
@@ -23,6 +23,19 @@ $bgLight: #f4f4f4;
 $bgDark: #252422;
 $bgRosa: #f9cdcd;
 
-.bgColorDark {
-    background-color: $bgDark;
+.firstAreaWork {
+    padding: 3% 5%;
+    h2 {
+        font-family: $sb;
+        font-size: 5rem;
+        width: 40%;
+    }
+
+    p {
+        font-family: $sm;
+        width: 30%;
+        // position: absolute;
+        margin-left: auto;
+        margin-right: 0;
+    }
 }
